Adição de itens novos da api, e organização

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.bini</groupId>
-	<artifactId>buscadorClimatico</artifactId>
+	<artifactId>buscadorCidades</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>buscadorClimatico</name>
 	<description>Demo project for Spring Boot</description>
